[workspace]
resolver = "2"
members = [
  "crates/engine",
  "crates/keys",
  "crates/rpc",
  "crates/runner/block-builder",
  "crates/runner/client",
  "crates/runner/manager",
  "crates/runner/relay",
  "crates/runner/rpc",
  "crates/runner/runner",
  "crates/runner/syncer",
  "crates/runner/tx-queue",
  "crates/test-utils",
  "examples",
]
exclude = ["crates/runner/manager/example-gated-program"]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = ["Nitro Labs <team@nitro.technology>"]

[workspace.dependencies]
# External dependencies from crates.io
async-trait = "0.1"
base64 = "0.22.1"
bincode = "1.3.3"
bon = "3.5.1"
dashmap = { version = "6.1.0", features = ["serde"] }
eyre = "0.6.12"
futures = "0.3"
getrandom = { version = "0.1", features = ["dummy"] }
hex = "0.4.3"
http = "1.1.0"
jsonrpsee = { version = "0.24", features = ["macros", "server"] }
md5 = "0.7.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.3"
tokio = { version = "1.35", default-features = false }
tower = "0.4"
tracing = "0.1.40"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", rev = "3c08e27e3f3ad3ebc454cb397c33aa0508eb97f8" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc", rev = "3c08e27e3f3ad3ebc454cb397c33aa0508eb97f8" }

# Solana & Agave
# Use crates.io to publish then patch with forked version of Agave
solana-account-decoder = "=2.0.5"
solana-bpf-loader-program = "=2.0.5"
solana-client = "=2.0.5"
solana-compute-budget = "=2.0.5"
solana-compute-budget-program = "=2.0.5"
solana-logger = "=2.0.5"
solana-program = "=2.0.5"
solana-program-runtime = "=2.0.5"
solana-rpc-client-api = "=2.0.5"
solana-sdk = "=2.0.5"
solana-svm = "=2.0.5"
solana-system-program = "=2.0.5"
solana-transaction-status = "=2.0.5"
solana-vote = "=2.0.5"

spl-token-2022 = "4.0.0"
spl-associated-token-account = "4.0.0"

anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "db6da5c67d896e0a94c158f69e9b235e364b3064" }

# Locals
svm-engine = { path = "crates/engine" }
svm-engine-keys = { path = "crates/keys" }
svm-test-utils = { path = "crates/test-utils" }
svm-runner-block-builder = { path = "crates/runner/block-builder" }
svm-runner-client = { path = "crates/runner/client" }
svm-runner-manager = { path = "crates/runner/manager" }
svm-runner-relay = { path = "crates/runner/relay" }
svm-runner-rpc = { path = "crates/runner/rpc" }
svm-runner = { path = "crates/runner/runner" }
svm-runner-syncer = { path = "crates/runner/syncer" }
svm-runner-tx-queue = { path = "crates/runner/tx-queue" }
example-gated-program = { path = "crates/runner/manager/example-gated-program/programs/example-gated-program" }
proxy = { path = "crates/runner/manager/example-gated-program/programs/proxy" }

[patch.crates-io]
curve25519-dalek_v3 = { package = "curve25519-dalek", git = "https://github.com/solana-labs/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }
solana-account-decoder = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-bpf-loader-program = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-client = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-compute-budget = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-compute-budget-program = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-logger = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-program = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-program-runtime = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-rpc-client-api = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-sdk = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-svm = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-system-program = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-transaction-status = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-vote = { git = "https://github.com/nitro-svm/agave.git", branch = "feat/sp1" }
solana-zk-token-sdk = { git = "https://github.com/nitro-svm/agave", branch = "feat/sp1" }
