[package]
name = "svm-test-utils"
description = "A set of utils for testing"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true

[dependencies]
# External dependencies from crates.io
bincode = { workspace = true }
eyre = { workspace = true }

# Solana & Agave
solana-program = { workspace = true }
solana-sdk = { workspace = true }

spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
