[package]
name = "stf"
version = { workspace = true }
edition = { workspace = true }
resolver = "2"
authors = { workspace = true }
license-file = { workspace = true }
homepage = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
# External dependencies from crates.io
anyhow = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }

# Sovereign dependencies
sov-accounts = { workspace = true }
sov-address = { workspace = true }
sov-attester-incentives = { workspace = true }
sov-bank = { workspace = true }
sov-blob-storage = { workspace = true }
sov-chain-state = { workspace = true }
sov-cli = { workspace = true, optional = true }
sov-kernels = { workspace = true }
sov-mock-da = { workspace = true }
sov-modules-api = { workspace = true }
sov-modules-stf-blueprint = { workspace = true }
sov-prover-incentives = { workspace = true }
sov-rollup-interface = { workspace = true }
sov-sequencer-registry = { workspace = true }
sov-state = { workspace = true }
sov-test-utils = { workspace = true, optional = true }

# Needed for Sovereign derive macros
strum = { workspace = true }

# Solana & Agave
solana-sdk = { workspace = true }

# Locals
svm = { workspace = true }
svm-types = { workspace = true }

[dev-dependencies]
# Locals
stf = { workspace = true, features = ["native"] }

[features]
default = []
native = [
	"dep:serde_json",
	"dep:sov-cli",
	"sov-accounts/native",
	"sov-address/native",
	"sov-attester-incentives/native",
	"sov-bank/native",
	"sov-blob-storage/native",
	"sov-chain-state/native",
	"sov-kernels/native",
	"sov-mock-da/native",
	"sov-modules-api/native",
	"sov-modules-stf-blueprint/native",
	"sov-prover-incentives/native",
	"sov-rollup-interface/native",
	"sov-sequencer-registry/native",
	"sov-state/native",
	"stf/native",
	"svm-types/native",
	"svm-types/test-utils",
	"svm/native",
]
test-utils = [ "dep:sov-test-utils", "svm-types/test-utils" ]

[package.metadata.cargo-machete]
ignored = ["strum"]
