[package]
name = "tester"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
# External dependencies from crates.io
anyhow = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
env_logger = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

# Sovereign dependencies
sov-cli = { workspace = true }
sov-modules-api = { workspace = true }
sov-rollup-apis = { workspace = true }
sov-sp1-adapter = { workspace = true }
sov-test-utils = { workspace = true }

# Solana & Agave
solana-account-decoder = { workspace = true }
solana-program = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }

# Locals
stf = { workspace = true, features = ["native"] }
svm = { workspace = true, features = ["test-utils"] }
svm-types = { workspace = true }

[features]
default = [ "stf/native" ]
