[package]
name = "svm-runner-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# External dependencies from crates.io
bincode = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "client"] }
md5 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

# Solana & Agave
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-sdk = { workspace = true }

anchor-lang = { workspace = true }

# Locals
svm-runner-rpc = { workspace = true }
proxy = { workspace = true }

[dev-dependencies]
# External dependencies from crates.io
tokio = { workspace = true }
