[package]
name = "svm-runner-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# External dependencies from crates.io
jsonrpsee = { workspace = true, features = ["macros", "server", "client"] }
thiserror = { workspace = true }

# Solana & Agave
solana-account-decoder = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-transaction-status = { workspace = true }
