[package]
name = "svm-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
# External dependencies from crates.io
bincode = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

# Solana & Agave
solana-transaction-status = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }

# Locals
svm-engine = { workspace = true }
svm-runner-block-builder = { workspace = true }
