[workspace]
members = ["programs/*", "tests"]
resolver = "2"

[workspace.dependencies]
# External dependencies from crates.io
bincode = "1.3.3"
tokio = { version = "1.44.2", features = ["full"] }

# Solana & Agave
solana-logger = "=2.0.5"
solana-sdk = "=2.0.5"
solana-test-validator = "=2.0.5"
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "db6da5c67d896e0a94c158f69e9b235e364b3064" }

# Locals
proxy = { path = "programs/proxy" }
example-gated-program = { path = "programs/example-gated-program" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
